<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Place It\'s</string>
    <string name="action_settings">Settings</string>
    <string name="action_placeits">My Place It\'s</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search an address</string>
    <string name="list_section1">Active</string>
    <string name="list_section2">Pulled Down</string>
    <string name="list_section3">Expired</string>
    <string name="input_title">Title</string>
    <string name="input_desc">Description</string>

    <string-array name="choices">
        <item>Single Location Place It</item>
        <item>Categorical Location Place It</item>
    </string-array>

    <string name="prompt">Create Place It here?</string>
    <string name="category_prompt_1">Category: </string>
    <string name="category_prompt_2">(Optional) \nAnother Category: </string>
    <string name="category_prompt_3">(Optional) \nAnother Category: </string>

    <string-array name="places">
        <item></item>
        <item>accounting</item>
        <item>airport</item>
        <item>amusement_park</item>
        <item>aquarium</item>
        <item>art_gallery</item>
        <item>atm</item>
        <item>bakery</item>
        <item>bank</item>
        <item>bar</item>
        <item>beauty_salon</item>
        <item>bicycle_store</item>
        <item>book_store</item>
        <item>bowling_alley</item>
        <item>bus_station</item>
        <item>cafe</item>
        <item>campground</item>
        <item>car_dealer</item>
        <item>car_rental</item>
        <item>car_repair</item>
        <item>car_wash</item>
        <item>casino</item>
        <item>cemetery</item>
        <item>church</item>
        <item>city_hall</item>
        <item>clothing_store</item>
        <item>convenience_store</item>
        <item>courthouse</item>
        <item>dentist</item>
        <item>department_store</item>
        <item>doctor</item>
        <item>electrician</item>
        <item>electronics_store</item>
        <item>embassy</item>
        <item>establishment</item>
        <item>finance</item>
        <item>fire_station</item>
        <item>florist</item>
        <item>food</item>
        <item>funeral_home</item>
        <item>furniture_store</item>
        <item>gas_station</item>
        <item>general_contractor</item>
        <item>grocery_or_supermarket</item>
        <item>gym</item>
        <item>hair_care</item>
        <item>hardware_store</item>
        <item>health</item>
        <item>hindu_temple</item>
        <item>home_goods_store</item>
        <item>hospital</item>
        <item>insurance_agency</item>
        <item>jewelry_store</item>
        <item>laundry</item>
        <item>lawyer</item>
        <item>library</item>
        <item>liquor_store</item>
        <item>local_government_office</item>
        <item>locksmith</item>
        <item>lodging</item>
        <item>meal_delivery</item>
        <item>meal_takeaway</item>
        <item>mosque</item>
        <item>movie_rental</item>
        <item>movie_theater</item>
        <item>moving_company</item>
        <item>museum</item>
        <item>night_club</item>
        <item>painter</item>
        <item>park</item>
        <item>parking</item>
        <item>pet_store</item>
        <item>pharmacy</item>
        <item>physiotherapist</item>
        <item>place_of_worship</item>
        <item>plumber</item>
        <item>police</item>
        <item>post_office</item>
        <item>real_estate_agency</item>
        <item>restaurant</item>
        <item>roofing_contractor</item>
        <item>rv_park</item>
        <item>school</item>
        <item>shoe_store</item>
        <item>shopping_mall</item>
        <item>spa</item>
        <item>stadium</item>
        <item>storage</item>
        <item>store</item>
        <item>subway_station</item>
        <item>synagogue</item>
        <item>taxi_stand</item>
        <item>train_station</item>
        <item>travel_agency</item>
        <item>university</item>
        <item>veterinary_care</item>
        <item>zoo</item>
    </string-array>

    <!-- Messages -->
    <string name="add_geofences_result_success">        Add Geofences: Success GeofenceRequestIds=%1$s</string>
    <string name="add_geofences_result_failure">        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="add_geofences_already_requested_error">        Can\'t add geofences, previous request hasn\'t finished.</string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="geofence_input_error_latitude_invalid">        Invalid latitude(s). Must be in the range -90 to 90 degrees</string>
    <string name="geofence_input_error_longitude_invalid">        Invalid longitude(s). Must be in the range -180 to 180 degrees</string>
    <string name="geofence_input_error_radius_invalid">        Invalid radius(s). Must be 1 meter or greater.</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_error_detail">        Geofence transition error, code %1$d message %2$s.</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">        Geofence transition error. Invalid type %1$d in geofences %2$s</string>
    <string name="geofence_transition_notification_text">        Click notification to return to app</string>
    <string name="geofence_transition_notification_title">        %1$s geofence(s) %2$s</string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="latitude_error_message">        Latitude should be in the range -90 to 90 degrees</string>
    <string name="longitude_error_message">        Longitude should be in the range -180 to 180 degrees</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="radius_error_message">Radius must be greater than or equal to 0</string>
    <string name="register_geofence">Register geofence</string>
    <string name="remove_geofences_id_failure">        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="remove_geofences_already_requested_error">        Can\'t remove geofences, previous request hasn\'t finished.</string>
    <string name="remove_geofences_id_success">        Removing geofences by request ids succeeded: request ids: %1$s</string>
    <string name="remove_geofences_intent_failure">        Removing all geofences failed: error code %1$d</string>
    <string name="remove_geofences_intent_success">        Removing all geofences succeeded.</string>
    <string name="transition_entered">entered</string>
    <string name="transition_exited">exited</string>
    <string name="transition_unknown">unknown</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="unregister_geofence">Remove geofences</string>
    <string name="unregister_geofence1">Remove geofence 1</string>
    <string name="unregister_geofence2">Remove geofence 2</string>

    <!-- Number patterns -->
    <string name="lat_lng_pattern">* ###.00000000;* -###.00000000</string>
    <string name="radius_pattern">* #.0000</string>
    <string name="category_placeits">Create Category\nPlace It\'s</string>

</resources>