<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
    
    <item
        android:id="@+id/action_placeits"
        android:showAsAction="ifRoom"
        android:title="@string/action_placeits" />   
        
    <item
        android:id="@+id/category_placeits"
        android:showAsAction="ifRoom"
        android:title="@string/category_placeits" /> 

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
